--- a/.github/workflows/build_Selenium.yml
+++ b/.github/workflows/build_Selenium.yml
@@ -19,10 +19,11 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 6.0.x
-    - name: Install chrom
-      run : 
-      studio apt-get update
-      studio apt-get install -y google-chrome-stable
+    - name: Install chrome
+      run:  sudo apt-get update
+            sudo apt-get install -y google-chrome-stable
+     
+    
     - name: Restore dependencies
       run: dotnet restore SeleniumBasicExercise.sln
     - name: Build SeleniumBasicExercise
