--- a/.github/workflows/build_Selenium.yml
+++ b/.github/workflows/build_Selenium.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Checkout repo
-    - uses: actions/checkout@v4
+      uses: actions/checkout@v4
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
       with:
