--- a/.github/workflows/build_Selenium.yml
+++ b/.github/workflows/build_Selenium.yml
@@ -25,8 +25,8 @@ jobs:
      
     
     - name: Restore dependencies
-      run: dotnet restore SeleniumBasicExercise.sln
-    - name: Build SeleniumBasicExercise
-      run: dotnet build SeleniumBasicExercise.sln --no-restore
+      run: dotnet restore 
+    - name: Build 
+      run: dotnet build  --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
